Added credits and several fixes

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   </head>
   <body>
     <script src="menu.js"></script>
+    <script src="credits.js"></script>
     <script src="core.js"></script>
     <script src="player.js"></script>
     <script src="enemy.js"></script>
